--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -2,6 +2,9 @@ footer {
     color: white;
     & .footer-top{
         background-image: url('/resources/img/footer-bg.jpg');
+        background-size: cover;
+        position: relative;
+        overflow: hidden;
         & .footer-top__menu{
             & ul{
                 list-style: none;
@@ -19,6 +22,17 @@ footer {
                     text-decoration: underline !important;
                 }
             }
+        }
+        &::after{
+            content: "";
+            display: block;
+            position: absolute;
+            top: -45px;
+            right: 140px;
+            height: 130%;
+            width: 570px;
+            background-repeat: no-repeat;
+            background-image: url('/resources/img/dc-logo-bg.png');
         }
     }
     & .footer-bottom{
