Completato anche il main della pagina Comics: - Creato un file scss a parte solo per il main della pagina comics dentro la cartella scss-partials-main-partials-comics-main.scss - Inserite le card dei comics in modo dinamico

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 @import 'partials/root';
 @import 'partials/header';
+@import 'partials/main-partials/comics-main.scss';
 @import 'partials/footer';
