Modificate tutte le unità di misura da pixel in rem

--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -27,10 +27,10 @@ footer {
             content: "";
             display: block;
             position: absolute;
-            top: -45px;
-            right: 140px;
+            top: -2.8125rem;
+            right: 8.75rem;
             height: 130%;
-            width: 570px;
+            width: 35.625rem;
             background-repeat: no-repeat;
             background-image: url('/resources/img/dc-logo-bg.png');
         }
@@ -39,7 +39,7 @@ footer {
         background-color: #303030;
         & .sign-up button{
             color: white;
-            border: 2.5px solid var(--blue-color);
+            border: .1563rem solid var(--blue-color);
             padding: .625rem .9375rem;
             background-color: transparent;
 
