--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -9,6 +9,10 @@ header {
         }
         & .header__nav ul li{
             margin: 0 1.25rem;
+            transition: all 0.3s;
+            &:hover{
+                transform: scale(1.2);
+            }
             & a{
                 text-decoration: none;
                 color: black;
