Creando le nuove pagine al click dei singoli magazine: - Al click di un comic, si apre una nuova pagina con tutti i dettagli riguardante esso con tutta la parte grafica

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,3 +3,4 @@
 @import 'partials/header';
 @import 'partials/main-partials/comics-main.scss';
 @import 'partials/footer';
+@import 'partials/main-partials/single-magazine.scss';
