Header reso sticky e aggiunto un drop shadow inferiore

--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -1,8 +1,15 @@
 header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    filter: drop-shadow(0px 0px 5px var(--blue-color));
     & .header-top{
         background-color: var(--blue-color);
     }
     & .header-bottom{
+        background-color: white;
         & .logo{
             max-width: 4.375rem;
             margin: 1.25rem 0;
